syntax = "proto3";

package ru.otus.protobuf.generated;

option java_multiple_files = true;

message SequenceRangeRequest {
    int64 firstNumber = 1;
    int64 lastNumber = 2;
}

message NextNumberMessage {
    int64 nextNumber = 1;
}

message Empty {}

service RemoteSequenceService {
    rpc getSequence(SequenceRangeRequest) returns (stream NextNumberMessage);
}